nav fix: one nav bar to rule them all

--- a/app/views/intra-a/guidance1.html
+++ b/app/views/intra-a/guidance1.html
@@ -1,73 +1,9 @@
-{% extends "layout.html" %}
+{% extends "layout-laa-a.html" %}
 
 {% block page_title %}
   Blank page
 {% endblock %}
-
 {% block content %}
-
-<div class="nested-menu-widget">
-  <div class="top-nav">
-    <ul class="categories-list">
-
-      <li class="category-item not-current ">
-        <a href="/intra-a/index" class="category-link">
-          Home  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current ">
-        <a href="#" class="category-link">
-          News  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-events">
-        <a href="#" class="category-link">
-          Events  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
-          Guidance &amp; forms  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
-          My work  </a>
-
-
-      </li>
-
-      <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
-          About us  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-blog">
-        <a href="https://intranet.justice.gov.uk/blog/" class="category-link">
-          Blog  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class="clear"></div>
 <main id="content" role="main" class="home-page">
   <ul class="breadcrumbs-list">
     <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
