--- a/app/views/intra-a/hr/index.html
+++ b/app/views/intra-a/hr/index.html
@@ -1,72 +1,11 @@
-{% extends "layout.html" %}
+{% extends "layout-laa-a.html" %}
 
 {% block page_title %}
   Blank page
 {% endblock %}
 
 {% block content %}
-<div class="nested-menu-widget">
-  <div class="top-nav">
-    <ul class="categories-list">
 
-      <li class="category-item not-current ">
-        <a href="index" class="category-link">
-          Home  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
-          News  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
-          Events  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="guidance1" class="category-link">
-          Guidance &amp; forms  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
-          My work  </a>
-
-
-      </li>
-
-
-      <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
-          About us  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-blog">
-        <a href="https://intranet.justice.gov.uk/blog/" class="category-link">
-          Blog  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-    </ul>
-  </div>
-</div>
 <main id="content" role="main" class="home-page">
 
   <div class="grid-row">
