--- a/app/views/intra-b/leave/index.html
+++ b/app/views/intra-b/leave/index.html
@@ -1,75 +1,10 @@
-{% extends "layout.html" %}
+{% extends "layout-laa-b.html" %}
 
 {% block page_title %}
   Blank page
 {% endblock %}
 
 {% block content %}
-<div class="nested-menu-widget">
-  <div class="top-nav">
-    <ul class="categories-list">
-
-      <li class="category-item not-current ">
-        <a href="/intra-b/index" class="category-link">
-          Home  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current ">
-        <a href="#" class="category-link">
-          News  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-events">
-        <a href="#" class="category-link">
-          Events  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-b/guidance1" class="category-link">
-          MoJ guidance  </a>
-
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-b/guidance2" class="category-link">
-          LAA guidance  </a>
-
-      </li>
-
-      <li class="category-item current main-nav-guidance">
-        <a href="/intra-b/my-work" class="category-link">
-          My work  </a>
-
-
-      </li>
-
-      <li class="category-item not-current main-nav-about-us">
-        <a href="#" class="category-link">
-          About us  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-
-      <li class="category-item not-current main-nav-blog">
-        <a href="https://intranet.justice.gov.uk/blog/" class="category-link">
-          Blog  </a>
-
-        <ul class="children-list">
-            </ul>
-      </li>
-    </ul>
-  </div>
-</div>
 <main id="content" role="main" class="home-page">
 
   <div class="grid-row">
@@ -93,7 +28,7 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
+            <li class="main-section"><a href="guidance1"></a></li>
             <li class="parent-section"><a href="/intra-b/hr/">HR</a></li>
             <li class="child-folder">
               <a href="#">Leave</a>
