OPG prototype pages

--- a/app/views/intra-a/index.html
+++ b/app/views/intra-a/index.html
@@ -206,7 +206,7 @@
           <ul class="apps">
             <li><a href="#">Buildings and facilities</a></li>
             <li><a href="#">Contact Shared Services</a></li>
-            <li><a href="/intra-a/hr/leave">Leave</a></li>
+            <li><a href="/opg-a/hr/leave">Leave</a></li>
             <li><a href="#">Learning and development</a></li>
             <li><a href="#">Performance management</a></li>
           </ul>
