--- a/app/views/layout-laa-a.html
+++ b/app/views/layout-laa-a.html
@@ -10,7 +10,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="/intra-a/index" class="category-link">
+        <a href="/opg-a/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -34,13 +34,13 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/opg-a/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/opg-a/my-work" class="category-link">
           My work  </a>
 
 
