--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -325,6 +325,13 @@ div.guidance {
   }
 }
 
+#global-header.opg {
+  background-color:#76b700;
+  .header-wrapper {
+    background-color:#76b700;
+  }
+}
+
 .moj-header {
   background-color:#333;
   height:24px;
