--- a/app/views/govuk_template-opg.html
+++ b/app/views/govuk_template-opg.html
@@ -74,12 +74,12 @@
     <div class="moj-header">
       <p>Ministry of Justice</p>
     </div>
-    <header role="banner" id="global-header" class="{% block header_class %}{% endblock %} laa">
+    <header role="banner" id="global-header" class="{% block header_class %}{% endblock %} opg">
       <div class="moj-header">
         <p>&nbsp;</p>
       </div>
       <div class="header-wrapper">
-        <div class="header-global"><span style="color:#fff;font-weight:bold;">LAA intranet: This is a prototype only</span>
+        <div class="header-global"><span style="color:#fff;font-weight:bold;">OPG intranet: This is a prototype only</span>
           <div class="header-logo">
 
             <!--a href="{{ homepage_url|default('https://www.gov.uk') }}" title="{{ logo_link_title|default('Go to the GOV.UK homepage') }}" id="logo" class="content">
