--- a/app/views/intra-a/civil/desk-aids.html
+++ b/app/views/intra-a/civil/desk-aids.html
@@ -10,13 +10,13 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/civil" class="breadcrumb-link">Civil</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/civil" class="breadcrumb-link">Civil</a>
         <span class="separator"></span>
       </li>
 
@@ -30,16 +30,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/intra-a/civil/">Civil</a></li>
+          <li class="main-section"><a href="/opg-a/my-work">My work</a></li>
+          <li class="parent-section"><a href="/opg-a/civil/">Civil</a></li>
           <li class="child">
-            <a href="/intra-a/civil/guidance">Guidance</a>
+            <a href="/opg-a/civil/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/intra-a/civil/sops">SOPs</a>
+            <a href="/opg-a/civil/sops">SOPs</a>
           </li>
           <li class="child current-page">
-            <a href="/intra-a/civil/desk-aids">Desk aids</a>
+            <a href="/opg-a/civil/desk-aids">Desk aids</a>
           </li>
 
 
