--- a/app/views/intra-a/guidance1.html
+++ b/app/views/intra-a/guidance1.html
@@ -6,7 +6,7 @@
 {% block content %}
 <main id="content" role="main" class="home-page">
   <ul class="breadcrumbs-list">
-    <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+    <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
             <span class="separator"></span>
     </li>
     <li class="breadcrumb-item current">Guidance and forms</li>
@@ -114,7 +114,7 @@
 
 
       <h3 class="category-title">
-        <a href="/intra-a/hr">HR</a>
+        <a href="/opg-a/hr">HR</a>
       </h3>
 
       <ul class="children-list"><li class="child-item">
@@ -123,7 +123,7 @@
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="/intra-a/hr/pay">Pay and benefits</a>
+        <a href="/opg-a/hr/pay">Pay and benefits</a>
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
