--- a/app/views/intra-a/hr/leave/parental-leave.html
+++ b/app/views/intra-a/hr/leave/parental-leave.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/opg-a/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -43,7 +43,7 @@
 
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/opg-a/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,16 +71,16 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/hr" class="breadcrumb-link">HR</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/hr" class="breadcrumb-link">HR</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/hr" class="breadcrumb-link">Leave</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/hr" class="breadcrumb-link">Leave</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">Parental leave policy - LSC legacy terms
@@ -94,7 +94,7 @@
       <div class="left-hand-navigation">
           <ul>
             <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
-            <li class="parent-section"><a href="/intra-a/hr/">HR</a></li>
+            <li class="parent-section"><a href="/opg-a/hr/">HR</a></li>
             <li class="child-folder">
               <a href="#">Leave</a>
             </li>
@@ -105,10 +105,10 @@
               <a href="#">Career break</a>
             </li>
             <li class="child-level-2">
-              <a href="/intra-a/hr/leave/laa-leave">Parental leave policy - LSC legacy terms</a>
+              <a href="/opg-a/hr/leave/laa-leave">Parental leave policy - LSC legacy terms</a>
             </li>
             <li class="child-level-2 current-page">
-              <a href="/intra-a/hr/leave/parental-leave">Parental leave policy - MoJ</a>
+              <a href="/opg-a/hr/leave/parental-leave">Parental leave policy - MoJ</a>
             </li>
             <li class="child-level-2">
               <a href="#">Privilege days</a>
