--- a/app/views/intra-a/leave/index.html
+++ b/app/views/intra-a/leave/index.html
@@ -10,13 +10,13 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/hr" class="breadcrumb-link">HR</a>
+      <li class="breadcrumb-item current"><a href="/opg-a/hr" class="breadcrumb-link">HR</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">Leave
@@ -30,7 +30,7 @@
       <div class="left-hand-navigation">
           <ul>
             <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
-            <li class="parent-section"><a href="/intra-a/hr/">HR</a></li>
+            <li class="parent-section"><a href="/opg-a/hr/">HR</a></li>
             <li class="child-folder">
               <a href="#">Leave</a>
             </li>
