OPG prototype pages

--- a/app/views/opg-b/guidance2.html
+++ b/app/views/opg-b/guidance2.html
@@ -29,17 +29,14 @@
 
       <ul class="children-list"><li class="child-item">
       <h4 class="child-title">
-        <a href="#">Learning and development</a>
+        <a href="#">Communicating with the media</a>
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="#">Pay and benefits</a>
+        <a href="#">Communicating with stakeholders</a>
       </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="#">Leave</a>
-      </h4>
-    </li></ul>
+    </li>
+  </ul>
 
 
     </div>
@@ -48,7 +45,7 @@
 
 
       <h3 class="category-title">
-        <a href="/opg-b/hr/">HR</a>
+        <a href="/opg-b/opg-hr/">HR</a>
       </h3>
 
       <ul class="children-list"><li class="child-item">
@@ -71,7 +68,7 @@
     <div class="column-third guidance">
 
       <h3 class="category-title">
-        <a href="https://intranet.justice.gov.uk/guidance/it-services/">IT and Digital</a>
+        <a href="/opg-b/opg-it">IT and Digital</a>
       </h3>
 
       <ul class="children-list">
@@ -82,14 +79,10 @@
         </li>
         <li class="child-item">
           <h4 class="child-title">
-            <a href="https://intranet.justice.gov.uk/guidance/it-services/it-portal/">IT portal</a>
+            <a href="#">IT portal</a>
           </h4>
         </li>
-        <li class="child-item">
-          <h4 class="child-title">
-          <a href="https://intranet.justice.gov.uk/guidance/it-services/improvement-initiatives/">Improving your service</a>
-          </h4>
-      </li>
+        
     </ul>
 
     </div>
