--- a/app/views/opg-b/hr/index.html
+++ b/app/views/opg-b/hr/index.html
@@ -25,7 +25,7 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="/opg-b/guidance1">OPG guidance</a></li>
+            <li class="main-section"><a href="/opg-b/guidance1">MoJ guidance</a></li>
             <li class="parent-section"><a href="#">HR</a></li>
             <li class="child">
               <a href="#">Sick absence</a>
