--- a/app/views/opg-b/opg-hr/index.html
+++ b/app/views/opg-b/opg-hr/index.html
@@ -15,7 +15,7 @@
       <li class="breadcrumb-item current"><a href="/opg-b/guidance2" class="breadcrumb-link">OPG guidance</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current">Communications
+      <li class="breadcrumb-item current">HR
 
       </li>
     </ul>
@@ -26,13 +26,10 @@
       <div class="left-hand-navigation">
           <ul>
             <li class="main-section"><a href="/opg-b/guidance2">OPG guidance</a></li>
-            <li class="parent-section"><a href="#">Communications</a></li>
-            <li class="child">
-              <a href="#">Communicating with the media</a>
-            </li>
-            <li class="child">
-              <a href="#">Communicating with stakeholders</a>
-            </li>
+            <li class="parent-section"><a href="#">HR</a></li>
+            <li class="child"><a href="/opg-b/opg-hr/flexible-working">Flexible working</a></li>
+
+
           </ul>
       </div>
 
@@ -42,7 +39,7 @@
     <div class="column-two-thirds content">
 
     <div class="">
-      <h1 class="page-title">Communications</h1>
+      <h1 class="page-title">HR</h1>
 
       <div class="page-metadata">
         <ul>
@@ -52,15 +49,27 @@
 
       </div>
 
-      <h2>Who to contact</h2>
+        <p>OPG-specific HR policies can be found in this section.</p>
 
-      <p>OPG specific communication policies can be found in this section.</p>
-
-
+        <ul>
+          <li><a href="flexible-working">Flexible working</a></li>
+        </ul>
 
 
   </div>
-</div>
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+  </div>
 
 
 
