OPG prototype pages

--- a/app/views/opg-a/hr/support-wellbeing/flexible-working.html
+++ b/app/views/opg-a/hr/support-wellbeing/flexible-working.html
@@ -45,7 +45,7 @@
             <li class="child-level-2">
               <a href="#">Eyecare vouchers</a>
             </li>
-            <li class="child-level-2">
+            <li class="child-level-2 current-page">
               <a href="/opg-a/hr/support-wellbeing/flexible-working">Flexible working</a>
             </li>
             <li class="child-level-2">
