--- a/app/views/opg-a/hr/index.html
+++ b/app/views/opg-a/hr/index.html
@@ -28,7 +28,7 @@
             <li class="main-section"><a href="/opg-a/guidance1">Guidance &amp; forms</a></li>
             <li class="parent-section"><a href="#">HR</a></li>
             <li class="child">
-              <a href="/opg-a/hr/support-wellbeing">Support and wellbeing</a>
+              <a href="/opg-a/hr/flexible-working">Flexible working</a>
             </li>
             <li class="child">
               <a href="#">Sick absence</a>
