--- a/app/views/opg-a/hr/support-wellbeing/flexible-working.html
+++ b/app/views/opg-a/hr/support-wellbeing/flexible-working.html
@@ -31,7 +31,7 @@
             <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
             <li class="parent-section"><a href="/opg-a/hr/">HR</a></li>
             <li class="child-folder">
-              <a href="#">Support and wellbeing</a>
+              <a href="/opg-a/hr/flexible-working/">Flexible working</a>
             </li>
             <li class="child-level-2">
               <a href="#">Appeals</a>
