--- a/app/views/opg-a/hr/index.html
+++ b/app/views/opg-a/hr/index.html
@@ -24,71 +24,73 @@
     <div class="column-third">
 
       <div class="left-hand-navigation">
-          <ul>
-            <li class="main-section"><a href="/opg-a/guidance1">Guidance &amp; forms</a></li>
-            <li class="parent-section"><a href="#">HR</a></li>
-            <li class="child">
-              <a href="/opg-a/hr/flexible-working">Flexible working</a>
-            </li>
-            <li class="child">
-              <a href="#">Sick absence</a>
-            </li>
-            <li class="child">
-              <a href="#">Performance management</a>
-            </li>
-            <li class="child">
-              <a href="#">Voluntary Early Redundancy (VEDS)</a>
-            </li>
-            <li class="child">
-              <a href="#">Organisational change framework</a>
-            </li>
-            <li class="child">
-              <a href="#">Customer service</a>
-            </li>
-            <li class="child">
-              <a href="#">Recruitment</a>
-            </li>
-            <li class="child">
-              <a href="#">End or change employment</a>
-            </li>
-            <li class="child">
-              <a href="/opg-a/hr/leave">Leave</a>
-            </li>
-            <li class="child">
-              <a href="/opg-a/hr/pay">Pay and benefits</a>
-            </li>
-            <li class="child">
-              <a href="#">Induction</a>
-            </li>
-            <li class="child">
-              <a href="#">Corporate performance group (CPG)</a>
-            </li>
-            <li class="child">
-              <a href="#">Non-Phoenix access</a>
-            </li>
-            <li class="child">
-              <a href="#">Pensions</a>
-            </li>
-            <li class="child">
-              <a href="#">Phoenix</a>
-            </li>
-            <li class="child">
-              <a href="#">Learning and development</a>
-            </li>
-            <li class="child">
-              <a href="#">Contact shared services</a>
-            </li>
 
-            <li class="child">
-              <a href="#">Conduct and behaviour</a>
-            </li>
-            <li class="child">
-              <a href="#">Change toolkit</a>
-            </li>
+            <ul>
+              <li class="main-section"><a href="/opg-a/guidance1">Guidance &amp; forms</a></li>
+              <li class="parent-section"><a href="/opg-a/hr/">HR</a></li>
+            
+              <li class="child">
+                <a href="#">Sick absence</a>
+              </li>
+              <li class="child">
+                <a href="#">Performance management</a>
+              </li>
+              <li class="child">
+                <a href="#">Voluntary Early Redundancy (VEDS)</a>
+              </li>
+              <li class="child">
+                <a href="/opg-a/hr/flexible-working">Flexible working</a>
+              </li>
+              <li class="child">
+                <a href="#">Organisational change framework</a>
+              </li>
+              <li class="child">
+                <a href="#">Customer service</a>
+              </li>
+              <li class="child">
+                <a href="#">Recruitment</a>
+              </li>
+              <li class="child">
+                <a href="#">End or change employment</a>
+              </li>
+              <li class="child">
+                <a href="/opg-a/hr/leave">Leave</a>
+              </li>
+              <li class="child">
+                <a href="/opg-a/hr/pay">Pay and benefits</a>
+              </li>
+              <li class="child">
+                <a href="#">Induction</a>
+              </li>
+              <li class="child">
+                <a href="#">Corporate performance group (CPG)</a>
+              </li>
+              <li class="child">
+                <a href="#">Non-Phoenix access</a>
+              </li>
+              <li class="child">
+                <a href="#">Pensions</a>
+              </li>
+              <li class="child">
+                <a href="#">Phoenix</a>
+              </li>
+              <li class="child">
+                <a href="#">Learning and development</a>
+              </li>
+              <li class="child">
+                <a href="#">Contact shared services</a>
+              </li>
+
+              <li class="child">
+                <a href="#">Conduct and behaviour</a>
+              </li>
+              <li class="child">
+                <a href="#">Change toolkit</a>
+              </li>
 
 
 
-          </ul>
+            </ul>
       </div>
 
     </div>
