--- a/app/views/intra-b/guidance1.html
+++ b/app/views/intra-b/guidance1.html
@@ -81,7 +81,7 @@
   </ul>
   <div class="grid-row">
     <div class="column-half">
-      <h1 class="intra-h1">Guidance &amp; forms</h1>
+      <h1 class="intra-h1">MoJ guidance</h1>
     </div>
   </div>
   <div class="grid-row">
