--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -212,9 +212,17 @@ div.guidance {
   }
 }
 
+/* Guidance with children showing on G&F page */
 .second-row {
-  margin-top:60px;
+  margin-top:60px; /* change to 30px if hiding children */
 }
+/*
+  Hide children...
+  .children-list {
+    display:none;
+  }
+*/
+
 
 .breadcrumbs-list {
   display:block;
