--- a/app/views/intra-a/civil/index.html
+++ b/app/views/intra-a/civil/index.html
@@ -9,10 +9,10 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/opg-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
 
@@ -26,16 +26,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/opg-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/opg-a/civil/">Civil</a></li>
+          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
+          <li class="parent-section"><a href="/intra-a/civil/">Civil</a></li>
           <li class="child">
-            <a href="/opg-a/civil/guidance">Guidance</a>
+            <a href="/intra-a/civil/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/opg-a/civil/sops">SOPs</a>
+            <a href="/intra-a/civil/sops">SOPs</a>
           </li>
           <li class="child">
-            <a href="/opg-a/civil/desk-aids">Desk aids</a>
+            <a href="/intra-a/civil/desk-aids">Desk aids</a>
           </li>
 
 
@@ -62,13 +62,13 @@
 
         <ul>
           <li class="child">
-            <a href="/opg-a/civil/guidance">Guidance</a>
+            <a href="/intra-a/civil/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/opg-a/civil/sops">SOPs</a>
+            <a href="/intra-a/civil/sops">SOPs</a>
           </li>
           <li class="child">
-            <a href="/opg-a/civil/desk-aids">Desk aids</a>
+            <a href="/intra-a/civil/desk-aids">Desk aids</a>
           </li>
         </ul>
 
