--- a/app/views/intra-a/crime/index.html
+++ b/app/views/intra-a/crime/index.html
@@ -10,10 +10,10 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/opg-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
 
@@ -27,16 +27,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/opg-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/opg-a/crime/">Crime</a></li>
+          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
+          <li class="parent-section"><a href="/intra-a/crime/">Crime</a></li>
           <li class="child">
-            <a href="/opg-a/crime/guidance">Guidance</a>
+            <a href="/intra-a/crime/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/opg-a/crime/sops">SOPs</a>
+            <a href="/intra-a/crime/sops">SOPs</a>
           </li>
           <li class="child">
-            <a href="/opg-a/crime/desk-aids">Desk aids</a>
+            <a href="/intra-a/crime/desk-aids">Desk aids</a>
           </li>
 
 
@@ -63,13 +63,13 @@
 
         <ul>
           <li class="child">
-            <a href="/opg-a/crime/guidance">Guidance</a>
+            <a href="/intra-a/crime/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/opg-a/crime/sops">SOPs</a>
+            <a href="/intra-a/crime/sops">SOPs</a>
           </li>
           <li class="child">
-            <a href="/opg-a/crime/desk-aids">Desk aids</a>
+            <a href="/intra-a/crime/desk-aids">Desk aids</a>
           </li>
         </ul>
 
