--- a/app/views/intra-a/hr/index.html
+++ b/app/views/intra-a/hr/index.html
@@ -10,10 +10,10 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/opg-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/intra-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">HR
@@ -26,7 +26,7 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="/opg-a/guidance1">Guidance &amp; forms</a></li>
+            <li class="main-section"><a href="/intra-a/guidance1">Guidance &amp; forms</a></li>
             <li class="parent-section"><a href="#">HR</a></li>
             <li class="child">
               <a href="#">Sick absence</a>
@@ -50,10 +50,10 @@
               <a href="#">End or change employment</a>
             </li>
             <li class="child">
-              <a href="/opg-a/hr/leave">Leave</a>
+              <a href="/intra-a/hr/leave">Leave</a>
             </li>
             <li class="child">
-              <a href="/opg-a/hr/pay">Pay and benefits</a>
+              <a href="/intra-a/hr/pay">Pay and benefits</a>
             </li>
             <li class="child">
               <a href="#">Induction</a>
