--- a/app/views/intra-a/hr/pay/index.html
+++ b/app/views/intra-a/hr/pay/index.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/opg-a/guidance1" class="category-link">
+        <a href="/intra-a/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -42,7 +42,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/opg-a/my-work" class="category-link">
+        <a href="/intra-a/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,13 +71,13 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/opg-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/opg-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/intra-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/opg-a/hr" class="breadcrumb-link">HR</a>
+      <li class="breadcrumb-item current"><a href="/intra-a/hr" class="breadcrumb-link">HR</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">Pay and benefits
@@ -91,7 +91,7 @@
       <div class="left-hand-navigation">
           <ul>
             <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
-            <li class="parent-section"><a href="/opg-a/hr/">HR</a></li>
+            <li class="parent-section"><a href="/intra-a/hr/">HR</a></li>
             <li class="child-folder">
               <a href="#">Pay and benefits</a>
             </li>
@@ -111,10 +111,10 @@
               <a href="#">ePayslips</a>
             </li>
             <li class="child-level-2">
-              <a href="/opg-a/hr/pay/pay-award">Pay award</a>
+              <a href="/intra-a/hr/pay/pay-award">Pay award</a>
             </li>
             <li class="child-level-2">
-              <a href="/opg-a/hr/pay/pay-deadlines">Pay deadlines</a>
+              <a href="/intra-a/hr/pay/pay-deadlines">Pay deadlines</a>
             </li>
             <li class="child-level-2">
               <a href="#">Qualification allowance</a>
