--- a/app/views/intra-a/guidance1.html
+++ b/app/views/intra-a/guidance1.html
@@ -13,72 +13,52 @@
   </ul>
   <div class="grid-row">
     <div class="column-half">
-      <h1 class="intra-h1">Guidance &amp; forms</h1>
+      <h1 class="intra-h1 guidance-h1">Guidance &amp; forms</h1>
     </div>
   </div>
   <div class="grid-row">
-
+    <div class="column-half">
+      <h2 class="heading-small guidance-h2">General guidance: A-Z</h2>
+    </div>
+  </div>
+  <div class="grid-row">
     <div class="column-third guidance">
-
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/">Commercial and contract management</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/hotels/">Hotels</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/trains-except-eurostar/">Trains (except Eurostar)</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/using-redfern-travel/">Using Redfern Travel (tRIPS)</a>
-    </h4>
-  </li></ul>
-
+    <h3 class="category-title"><a href="#">Buildings and facilities</a></h3>
+      <h3 class="category-title"><a href="#">Change management</a></h3>
+      <h3 class="category-title"><a href="#">Charities and volunteering</a></h3>
+      <h3 class="category-title"><a href="#">Commercial and contract management</a></h3>
+      <h3 class="category-title"><a href="#">Communications</a></h3>
+      <h3 class="category-title"><a href="#">Devolution</a></h3>
+      <h3 class="category-title"><a href="#">Diversity &amp; Inclusion</a></h3>
+      <h3 class="category-title"><a href="#">Financial principles and controls</a></h3>
+      <h3 class="category-title"><a href="#">Fire, health and safety</a></h3>
     </div>
     <div class="column-third guidance">
 
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/">Fire, health and safety</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/display-screen-equipment-workstation-support/">Display screen equipment and workstation support</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/risk-assessment/">Risk assessment</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/safety-in-the-office/">Safety in the office</a>
-    </h4>
-  </li></ul>
+      <h3 class="category-title"><a href="hr">HR</a></h3>
+      <h3 class="category-title"><a href="#">IT and Digital</a></h3>
+      <h3 class="category-title"><a href="#">Internal audit</a></h3>
+      <h3 class="category-title"><a href="#">Jobs</a></h3>
+      <h3 class="category-title"><a href="#">Knowledge and information</a></h3>
+      <h3 class="category-title"><a href="#">Legal services</a></h3>
+      <h3 class="category-title"><a href="#">Nominations</a></h3>
+      <h3 class="category-title"><a href="#">Operational Delivery Profession (ODP)</a></h3>
+      <h3 class="category-title"><a href="#">Policy making</a></h3>
 
     </div>
+
     <div class="column-third guidance">
 
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/">IT and Digital</a>
-    </h3>
 
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-in-moj/">IT in MoJ</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-portal/">IT portal</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/improvement-initiatives/">Improving your service</a>
-    </h4>
-  </li></ul>
+      <h3 class="category-title"><a href="#">Public consultation guidance</a></h3>
+      <h3 class="category-title"><a href="#">Research and analysis</a></h3>
+      <h3 class="category-title"><a href="#">Reserve forces</a></h3>
+      <h3 class="category-title"><a href="#">Risk management</a></h3>
+      <h3 class="category-title"><a href="#">Security</a></h3>
+      <h3 class="category-title"><a href="#">Social media</a></h3>
+      <h3 class="category-title"><a href="#">Statistical summaries</a></h3>
+      <h3 class="category-title"><a href="#">Working with arms length bodies (ALBs)</a></h3>
+
 
     </div>
 
@@ -86,83 +66,86 @@
   </div>
 
   <div class="grid-row second-row">
-
-    <div class="column-third guidance">
-
-
-      <h3 class="category-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/financial-principles-and-controls/">Financial principles and controls</a>
-      </h3>
-
-      <ul class="children-list"><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/banking-cash-management/">Banking and cash management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/">Financial management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/training/">Training</a>
-      </h4>
-    </li></ul>
-
-
+    <div class="column-half">
+      <h2 class="heading-small guidance-h2">Case management</h2>
     </div>
-    <div class="column-third guidance">
-
-
-      <h3 class="category-title">
-        <a href="/intra-a/hr">HR</a>
-      </h3>
-
-      <ul class="children-list"><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/hr/learning-and-development/">Learning and development</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="/intra-a/hr/pay">Pay and benefits</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/hr/sick-absence/">Sick absence</a>
-      </h4>
-    </li></ul>
-
-
-    </div>
-    <div class="column-third guidance">
-
-
-      <h3 class="category-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/">Knowledge and information</a>
-      </h3>
-
-      <ul class="children-list"><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/knowledge-management/">Knowledge management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/library-services/">Library services</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/managing-information/">Managing information</a>
-      </h4>
-    </li></ul>
-
-
-    </div>
-
-
   </div>
+  <div class="grid-row third-row">
+    <div class="column-third guidance">
 
+    <h3 class="category-title with-children">
+      <a href="/intra-a/civil/">Civil</a>
+    </h3>
 
+    <ul class="children-list">
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/civil/guidance">Civil guidance</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/civil/sops">Civil SOPs</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/civil/desk-aids">Civil desk aids</a>
+        </h4>
+      </li>
+    </ul>
 
+    </div>
+    <div class="column-third guidance">
+      <h3 class="category-title with-children">
+        <a href="/intra-a/crime/">Crime</a>
+      </h3>
 
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/crime/guidance">Crime guidance</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/crime/sops">Crime SOPs</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/crime/desk-aids">Crime desk aids</a>
+          </h4>
+        </li>
+      </ul>
+
+    </div>
+    <div class="column-third guidance">
+
+    <h3 class="category-title with-children">
+      <a href="/intra-a/general">General</a>
+    </h3>
+
+    <ul class="children-list">
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/general/guidance">General guidance</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/general/sops">General SOPs</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-a/general/desk-aids">General desk aids</a>
+        </h4>
+      </li>
+    </ul>
+
+    </div>
+  </div>
 
 </main>
 
