--- a/app/views/intra-a/guidance1.html
+++ b/app/views/intra-a/guidance1.html
@@ -11,14 +11,12 @@
     </li>
     <li class="breadcrumb-item current">Guidance and forms</li>
   </ul>
+
   <div class="grid-row">
-    <div class="column-half">
-      <h1 class="intra-h1 guidance-h1">Guidance &amp; forms</h1>
-    </div>
-  </div>
-  <div class="grid-row">
-    <div class="column-half">
+    <div class="column-two-thirds">
+        <h1 class="intra-h1 guidance-h1">Guidance &amp; forms</h1>
       <h2 class="heading-small guidance-h2">General guidance: A-Z</h2>
+      <p>Find information on LAA's and MoJ's policies and processes.</p>
     </div>
   </div>
   <div class="grid-row">
@@ -66,8 +64,9 @@
   </div>
 
   <div class="grid-row second-row">
-    <div class="column-half">
+    <div class="column-two-thirds">
       <h2 class="heading-small guidance-h2">Case management</h2>
+      <p>Find SOPs and desk aids relating to case management.</p>
     </div>
   </div>
   <div class="grid-row third-row">
