--- a/app/views/hmcts-a/my-work.html
+++ b/app/views/hmcts-a/my-work.html
@@ -16,51 +16,293 @@
     <div class="column-two-thirds">
         <h1 class="intra-h1 guidance-h1">My work</h1>
 
+          <p>Operational guidance for HMCTS staff.</p>
+
     </div>
   </div>
   <div class="grid-row">
-    <div class="column-third guidance">
-    <h3 class="category-title"><a href="#">Buildings and facilities</a></h3>
-      <h3 class="category-title"><a href="#">Change management</a></h3>
-      <h3 class="category-title"><a href="#">Charities and volunteering</a></h3>
-      <h3 class="category-title"><a href="#">Commercial and contract management</a></h3>
-      <h3 class="category-title"><a href="#">Communications</a></h3>
-      <h3 class="category-title"><a href="#">Devolution</a></h3>
-      <h3 class="category-title"><a href="#">Diversity &amp; Inclusion</a></h3>
-      <h3 class="category-title"><a href="#">Financial principles and controls</a></h3>
-      <h3 class="category-title"><a href="#">Fire, health and safety</a></h3>
-    </div>
-    <div class="column-third guidance">
-
-      <h3 class="category-title"><a href="hr">HR</a></h3>
-      <h3 class="category-title"><a href="#">IT and Digital</a></h3>
-      <h3 class="category-title"><a href="#">Internal audit</a></h3>
-      <h3 class="category-title"><a href="#">Jobs</a></h3>
-      <h3 class="category-title"><a href="#">Knowledge and information</a></h3>
-      <h3 class="category-title"><a href="#">Legal services</a></h3>
-      <h3 class="category-title"><a href="#">Nominations</a></h3>
-      <h3 class="category-title"><a href="#">Operational Delivery Profession (ODP)</a></h3>
-      <h3 class="category-title"><a href="#">Policy making</a></h3>
-
-    </div>
-
-    <div class="column-third guidance">
-
-
-      <h3 class="category-title"><a href="#">Public consultation guidance</a></h3>
-      <h3 class="category-title"><a href="#">Research and analysis</a></h3>
-      <h3 class="category-title"><a href="#">Reserve forces</a></h3>
-      <h3 class="category-title"><a href="#">Risk management</a></h3>
-      <h3 class="category-title"><a href="#">Security</a></h3>
-      <h3 class="category-title"><a href="#">Social media</a></h3>
-      <h3 class="category-title"><a href="#">Statistical summaries</a></h3>
-      <h3 class="category-title"><a href="#">Working with arms length bodies (ALBs)</a></h3>
-
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Civil</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">SOPs - civil</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+          </h4>
+        </li>
+  </ul>
 
     </div>
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Crown Court</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">SOPs - Crown Court</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/youth">Youth</a>
+          </h4>
+        </li>
+  </ul>
+
+    </div>
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Family</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">SOPs - Family</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Use of email in civil and family courts</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="grid-row second-row">
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Legal services</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Applications and warrants</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">Civil</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Crime</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Family</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Learning and career development</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Legal and Judicial Services Team</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Magistrates' Court</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">SOPs - Magistrates' Court</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Legal Aid business team</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Policies and procedures</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Programmes and projects</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Single Justice Procedure (SJP)</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Youth</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Tribunals</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/sops">SOPs - Tribunals</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/policies">Policies and procedures</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/programmes">Programmes and projects</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/email">Judicial Office</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="grid-row second-row">
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Performance</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">HMCTS Performance Database</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Libra MIS - Management Information Services</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Court statistics</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms and guidance</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">BMS guide</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Video conferencing service</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Prison to court video link (PCVL)</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Live links / virtual courts</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Victims and witness links (VIW)</a>
+          </h4>
+        </li>
+      </ul>
+    </div>
+
+    <div class="column-third guidance my-work">
+      <h3 class="category-title with-children"><a href="#">Enforcement</a></h3>
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Forms</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-a/work/civil/forms">Policies and procedures</a>
+          </h4>
+        </li>
+
+      </ul>
+    </div>
+
 
 
   </div>
+
+
+
 
 
 </main>
