--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -207,11 +207,7 @@ div.guidance {
     font-weight: bold;
     padding: 15px 0;
   }
-  h3.with-children {
-    margin-bottom:0;
-    border:0;
-    padding:0;
-  }
+
   .children-list {
     h4 {
       font-size:16px;
@@ -224,10 +220,21 @@ div.guidance {
   }
 }
 
+div.guidance.my-work {
+  h3 {
+    margin-bottom:0;
+    padding-bottom:0;
+  }
+  .children-list {
+    display: block;
+    margin-top:0;
+  }
+}
+
 /* Guidance with children showing on G&F page */
 .second-row {
   margin-top: 30px;
-  border-top:1px solid $panel-colour;
+  /*border-top:1px solid $panel-colour;*/
   h2.heading-small.guidance-h2 {
     margin-top:30px;
   }
@@ -346,6 +353,8 @@ h2.heading-small.guidance-h2 {
     font-weight:bold;
   }
 
+
+
   ul {
     li {
 
@@ -403,4 +412,12 @@ h2.heading-small.guidance-h2 {
   li {
     list-style-type:disc;
   }
+}
+
+details {
+  border-top:1px solid #e8e8e8;
+  padding-top:15px;
+}
+summary span.summary {
+  font-weight:700;
 }
